--- a/style.css
+++ b/style.css
@@ -19,3 +19,37 @@
     color: white;
     text-align: center;
 }
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 20px 0;
+  margin: 0;
+  text-align: center;
+  background-color: ghostwhite;
+}
+
+span {
+  border-bottom: 2px solid blue;
+  padding: 4px;
+}
+
+input {
+  border: 0.1px solid rgba(0, 0, 255, 0.5);
+  width: 50px;
+  border-radius: 50px;
+}
+
+h1 {
+  color: rgb(54, 54, 54);
+}
+
+button {
+  margin: 20px 0;
+  background: ghostwhite;
+  color: rgb(54, 54, 54);
+  border: 0.1px solid rgba(0, 0, 255, 0.5);
+  border-radius: 50px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 5px 8px;
+}
