--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   padding: 20px 0;
   margin: 0;
   text-align: center;
@@ -48,13 +48,50 @@ button {
   padding: 5px 8px;
 }
 
-nav {
+#main-nav ul {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
+  padding: 0;
 }
 
 li {
   display: inline-block;
-  margin: 0 0 50px 50px;
+  margin: 0;
+}
+
+.blackjack {
+  background-image: url("table.png");
+  background-size: cover;
+}
+
+.blackjack-title {
+  color: goldenrod
+}
+
+.blackjack p {
+  color: white;
+  font-weight: bold;
+}
+
+#message-el {
+  font-style: italic;
+}
+
+.bj-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bj-buttons button {
+  margin: 2px;
+  background: goldenrod;
+  color: #016f32;
+  border: 0.1px solid rgba(0, 0, 255, 0.5);
+  border-radius: 50px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 5px 8px;
+  width: 150px;
 }
